CHANGES SINCE FLTK 1.0.11

	- Made the Forms pixmap parameter const to match the
	  Fl_Pixmap.H definitions.

	- Changed the Fl_Pixmap constructor to use the explicit
	  keyword which should work for all C++ compilers.

	- Fl_Menu_add of a menu item with the same name as an
	  existing submenu title would mess up by replacing that
	  menu title, it now adds a new item.

	- Fl_Menu::add() of text starting with '/' to a menu is
	  assummed to be a filename. So "/foo/bar" creates a
	  single menu item. You can also put filenames into
	  submenus by doing "submenu//foo/bar", this will create
	  a submenu called "submenu" with an item "/foo/bar".
	  Menu items starting with "\_" will insert an item
	  starting with '_' rather than a divider line. These
	  changes make the menus compatable with fltk 2.0.

	- Another little fix for the BoXX OpenGL overlays.


CHANGES SINCE FLTK 1.0.10

	- CHANGED THE DEFAULT RUN-TIME LINKING TO "MULTITHREADED
	  DLL". You'll need to change your project settings to
	  use this as well or you'll get errors.

	- Added new --disable-gl option to configure script.

	- Added new const const pointer versions of pixmap
	  functions to eliminate an annoying pointer warning
	  message that was generated by the Sun and other C++
	  compilers.

	- Eliminated all "var hides class::var" warnings.

	- Eliminated all "string literal converted to char *"
	  warnings.

	- OS/2 updates from Alexander Mai.

	- Tidied up the HTML documentation to be more standards
	  compliant.

	- Compiling with -DBOXX_BUGS will work around some
	  problems with the newest X drivers that BoXX delivers,
	  the problems all affect use of Overlays for normal X
	  drawing and OpenGL drawing. Normal compilation is
	  unchanged.

	- The file chooser buttons use user_data() rather than
	  the label to decide what to do, allowing the label to
	  be somewhat cleaner.

	- Selection color on X changed to blue, to match what
	  happens on Windows now.
